styles/main.css
html, body { height: 100%; }
body {
  font-family: Ubuntu, Helvetica, Arial, sans-serif;
  margin: 0;
}

#arena {
  /*margin: 50px auto;*/

  position: relative;
  /*width: 800px;*/
  /*height: 600px;*/
  width: 100%;
  height:100%;

  background-color: #ccc;
}

.drone {
  position: absolute;
  width: 50px;
  height: 50px;
  margin-left: -25px;
  margin-top: -12px;
  background-image: url("../images/drone-spritesheet.png");

  /*background-color: blue;*/
  /*border: 1px solid black;*/

  z-index: 99;
}

.area {
  position: absolute;
  border-width: 2px;
  border-style: solid;
}

#intro {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 500px;
  height: 150px;
  margin: -100px -300px;
  padding: 50px;
  background-color: rgba(255,255,255,0.9);
  border-radius: 20px;
  z-index: 40;
  color: #333;
}
#intro h1, #achievements h3 {
  color: #3BA5DE;
  text-shadow: 1px 1px  5px #ccc;
  margin-top: 5px;
}

#continue {
  margin-top: 15px;
  display: inline-block;
  padding: 8px;
  background-color: #3BA5DE;
  color: white;
  box-shadow: 1px 1px  5px #aaa;
  border-radius: 4px;
  text-decoration: none;
}

#intro p {
  margin: 5px 0;
}

/*.drone .prop {
  width: 25px;
  height: 25px;
  background-image: url(/images/prop.png);
}*/

.marker-vid {
  position: absolute;
  left: -12px;
}

.marker-vid-label {
  position: relative;
  bottom: 43px;
  right: 35px;
  width: 100px;
  padding: 5px 6px;

  color: #333;
  font-family: Ubuntu, Helvetica, Arial, sans-serif;
  text-align: center;
  background-color: rgba(255, 255, 255, 0.4);
  line-height: 1.5em;
  background-color: rgba(255,255,255,0.9);
  border-radius: 5px;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
}

.marker-icon-yellow {
  position: absolute;
  width: 25px;
  height: 41px;
  background-image: url("../images/marker-icon-yellow.png");
}

.marker-icon-purple {
  position: absolute;
  width: 25px;
  height: 41px;
  background-image: url("../images/marker-icon-purple.png");
}

.marker-icon-red {
  position: absolute;
  width: 25px;
  height: 41px;
  background-image: url("../images/marker-icon-red.png");
}

.marker-icon-gray {
  position: absolute;
  width: 25px;
  height: 41px;
  background-image: url("../images/marker-icon-gray.png");
}
.highlight {
  border: 1px solid #ccc;
  box-shadow: 0 0 10px 10px #FFF;
    /*background-color: yellow;*/
    /*box-shadow: 10px 10px yellow;*/
    /*background-size: 30px;
    width: 35px;
    height: 51px;
    margin-top: -10px;
    margin-left: -10px;
    background-repeat: none;

  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
  -ms-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;*/
}

.notifier-widget {
  position: absolute;
  top: 150px;
  left: 15px;

  opacity: 0;

  padding: 10px 15px;
  line-height: 1.5em;
  background-color: rgba(255,255,255,0.9);
  border-radius: 10px;
  box-shadow: 0 0 5px 0 #d0d;

  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
  -ms-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;

  z-index: 45;
}

.notifier-visible {
  top: 15px;
  opacity: 1;
}

#achievements {
  position: absolute;
  top: 0;
  left: 0;
  background-color: rgba(255, 255, 255, 0.9);
  border: solid 1px #3BA5DE;
  border-width: 0 1px 1px 0;
  width: 250px;
  border-radius: 0 0 10px 0;
}
#achievements h3 {
  margin: 0;
  padding: 10px;
  padding-bottom: 5px;
  margin-bottom: 5px;
  text-align: center;
  border-bottom: solid 1px #3BA5DE;
  text-shadow: 1px 1px  5px #dedede;

}
#achievements small {
  color: #666;
  font-style:italic;
  display: block;
  margin: 10px auto;
  text-align: center;
}
#achievements ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
#achievements li {
  border-bottom: solid 1px #3BA5DE;
  padding: 10px;
  color: #666;
  font-size: 14px;
}
#achievements li b {
  color: #333;
}

